--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nike</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header class="header">
-        <nav class="header__nav"></nav>
-        <div class="header__content"></div>
+         <nav class="header__nav"></nav>
+        <div class="header__content">
+           <h1 class="header__content-title">NIKE</h1>
+           <p class="header__content-text">Крутые кроссовки от NIKE для вас   </p>
+            </div>
+        
     </header>
     <main class="main">
         <section class="news"></section>
