--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nike</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header class="header">
@@ -18,6 +19,25 @@
         <section class="just"></section>
         <section class="express"></section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="container">
+                <ul class="footer__ul">
+                    <li><a href="" class="footer__link">Кроссовки</a></li>
+                    <li><a href="" class="footer__link">Кеды</a></li>
+                    <li><a href="" class="footer__link">Футболки</a></li>
+                    <li><a href="" class="footer__link">Шорты</a></li>
+                    <li><a href="" class="footer__link">Майки</a></li>
+                    <li><a href="" class="footer__link">Олимпийки</a></li>
+                    <li><a href="" class="footer__link">Толстовки</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer__product">
+            <div class="container">
+                <p class="footer__content-text">Макет разработан в целях обучения. PROWEB</p>
+            </div>  
+        </div>
+    </footer>
 </body>
 </html>
