--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nike</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header class="header">
@@ -15,7 +16,12 @@
         <section class="news"></section>
         <section class="products"></section>
         <section class="krossi"></section>
-        <section class="just"></section>
+        <section class="just">
+            <div class="just__content">
+                <h2 class="just__content-title">NIKE</h2>
+                <h2 class="just__content-title">Just Do It</h2>
+            </div>
+        </section>
         <section class="express"></section>
     </main>
     <footer class="footer"></footer>
