--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nike</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header class="header">
@@ -12,7 +13,44 @@
         <div class="header__content"></div>
     </header>
     <main class="main">
-        <section class="news"></section>
+        <section class="news">
+            <div class="main__news-box">
+                <h3 class="main__text">main news 
+                    <span class="main__second-text">All</span>
+                </h3>
+                </div>
+                    <div class="container">
+                        <div class="news__list">
+                            <div class="news__info">
+                                <img src="images/news img.jpg" alt="">
+                                <h4 class="news__list-title">Shoe Review: Nike React</h4>
+                                <p class="news__paragrf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lorem fermentum, sed tincidunt. Hac malesuada id id quis interdum odio odio. Amet viverra lacus, integer aliquam. Ultrices erat magna adipiscing massa.
+                                </p>
+                                <div class="news__end">
+                                    VIEW
+                                </div>
+                        </div>
+                            <div class="news__info">
+                                <img src="images/sec.jpg" alt="">
+                                <h4 class="news__list-title">Gear Up For Football</h4>
+                                <p class="news__paragrf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lorem fermentum, sed tincidunt. Hac malesuada id id quis interdum odio odio. Amet viverra lacus, integer aliquam. Ultrices erat magna adipiscing massa.
+                                </p>
+                                <div class="news__end">
+                                    VIEW
+                                </div>
+                        </div>
+                            <div class="news__info">
+                                <img src="images/thr.jpg" alt="">
+                                <h4 class="news__list-title">Gear Up For Football</h4>
+                                <p class="news__paragrf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lorem fermentum, sed tincidunt. Hac malesuada id id quis interdum odio odio. Amet viverra lacus, integer aliquam. Ultrices erat magna adipiscing massa.
+                                </p>
+                                <div class="news__end">
+                                    VIEW
+                                </div>
+                        </div>
+                    </div>
+                    </div>
+        </section>
         <section class="products"></section>
         <section class="krossi"></section>
         <section class="just"></section>
